# AnimaGo

./: .gitignore  CHANGELOG.md  DOCS.md  README.md  pyproject.toml
src/: __init__.py  __main__.py  main.py  test_sticker.py
src/components/: achievements.py  biodex.py  leaderboard.py
src/config/: __init__.py
src/core/: __init__.py
src/firebase/: firebase_config.py
src/geo/: __init__.py
src/server/: app.py
src/services/: api.py  audiodetector.py  sticker.py
src/temp/: map.html
src/vision/: __init__.py
